unify ESBaseTester implementations